# b2p0

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml
src/polymarket_bot/: __init__.py  __main__.py  clients_clob.py  clients_gamma.py  clients_spot.py  config.py  execution.py  http_utils.py  learning.py  learning_seed.py  main.py  models.py  pricing.py  risk.py  runtime_state.py  runtime_support.py  storage.py
src/polymarket_bot/engines/: __init__.py  engine_1h_maker.py  engine_pair_arb.py  engine_short_dir.py  engine_tenor_arb.py
tests/: helpers.py  test_cli_duration.py  test_clob_stream.py  test_ev.py  test_fee_gate.py  test_gamma_client.py  test_learning.py  test_learning_seed.py  test_live_executor.py  test_pair_arb.py  test_paper_executor.py  test_risk.py  test_runtime_reconciliation.py  test_spot_client.py  test_spot_tracker.py
tools/: run_live_batch.py
