[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Fast-launch BTC tenor trading bot for Polymarket."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "websocket-client>=1.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
